apps/sonarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarr
spec:
  selector:
    matchLabels:
      app: sonarr
  serviceName: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - image: ghcr.io/linuxserver/sonarr:version-4.0.20.3014
          imagePullPolicy: Always
          name: sonarr
          ports:
            - containerPort: 8989
              name: http
          readinessProbe:
            httpGet:
              path: /login
              port: 8989
            initialDelaySeconds: 10
            periodSeconds: 15
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 2048Mi
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
            - name: shows
              mountPath: /tv
      volumes:
        - name: downloads
          persistentVolumeClaim:
            claimName: nfs-downloads
        - name: shows
          persistentVolumeClaim:
            claimName: nfs-videos-shows
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
        storageClassName: longhorn
